--- a/index.html
+++ b/index.html
@@ -18,24 +18,20 @@
                   <img src="./img/perfil.jpg" alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como Caarizzo</a>
-                <a href="#" class="instagram logout">Remover conta</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
+                <p class="not-account">Não é Caarizzo?</p>
+                <p class="not-account"></p>
+                <span class="link-blue">Alterar conta  ou Increva-se </span>
+                </p>
             </div>
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
-            <div class="download">
-                <a href="#" class="app-download"></a>
-                <a href="#" class="app-download"></a>
-        
-            </div>
-                <p class="not-account">Não é Caarizzo?</p>
-                <p class="notaccount">
-                    <span class="link-blue">Alterar conta</span>
-                    ou 
-                    <span class="link-blue">Inscreva-se</span>
-
-                </p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
             </div>
         </div>
     </div>
